syntax = "proto3";

package quotes;

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/quotes";

// QuotesService manages and generates quotes
service QuotesService {
  // GenerateQuote generates a new quote
  rpc GenerateQuote(GenerateQuoteRequest) returns (GenerateQuoteResponse) {}
  // SaveQuote saves a quote
  rpc SaveQuote(SaveQuoteRequest) returns (SaveQuoteResponse) {}
  // GetQuote retrieves a saved quote
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
}

// GenerateQuoteRequest contains quote generation parameters
message GenerateQuoteRequest {
  string category = 1;
  map<string, string> parameters = 2;
}

// GenerateQuoteResponse contains the generated quote
message GenerateQuoteResponse {
  string quote_id = 1;
  string content = 2;
  string category = 3;
  map<string, string> metadata = 4;
}

// SaveQuoteRequest contains the quote to save
message SaveQuoteRequest {
  string content = 1;
  string category = 2;
  string user_id = 3;
  map<string, string> metadata = 4;
}

// SaveQuoteResponse contains the saved quote identifier
message SaveQuoteResponse {
  string quote_id = 1;
  string message = 2;
}

// GetQuoteRequest contains the quote identifier
message GetQuoteRequest {
  string quote_id = 1;
}

// GetQuoteResponse contains the quote details
message GetQuoteResponse {
  string quote_id = 1;
  string content = 2;
  string category = 3;
  string user_id = 4;
  map<string, string> metadata = 5;
  int64 created_at = 6;
} 